# faucetbot

./: Cargo.toml
src/: main.rs  settings.rs
